crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_comments__remove_comments-3.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_comments.rs
expression: "test_config(r#\"{ \"removeComments\": { \"preservePatterns\": [] } }\"#,\nSome(r#\"<!--!Icon Font v1 by @iconfont - Copyright 2023 Icon Font CIC.-->\n<svg xmlns=\"http://www.w3.org/2000/svg\">\n    test\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    test
</svg>
