crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_comments__remove_comments.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_comments.rs
expression: "test_config(r#\"{ \"removeComments\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!--- test -->\n    <g>\n        <!--- test -->\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <g/>
</svg>
